--- a/node-lib/package.json
+++ b/node-lib/package.json
@@ -3,5 +3,9 @@
   "type": "module",
   "dependencies": {
     "chalk": "5.0.1"
+  },
+  "scripts": {
+    "cli": "node ./src/cli.js ./arquivos/texto.md",
+    "cli:valida": "node ./src/cli.js ./arquivos/texto.md --valida"
   }
 }
